<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
	<LinearLayout
		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
    	>
		<TextView
		    android:id="@+id/mytv_main"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/mytv_main"
		    android:textSize="48sp" 
		    />
    </LinearLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:gravity="top"
        >
	<EditText
	    android:id="@+id/myet"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="start"
		android:layout_marginTop="8sp"
		android:layout_marginLeft="28sp"
		android:layout_marginStart="28sp"
		android:hint="@string/etHint"
	    android:inputType="number"
		android:imeOptions="actionNone"
	    android:maxLength="1"
	    android:ems="12"
	    >
	    <requestFocus/>
	</EditText>
	<Button
	    android:id="@+id/myetButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:onClick="SendMessege"
	    android:background="#40000000"
	    android:text="@string/myetButton"
	    />
	</RelativeLayout>
	<LinearLayout
	    android:id="@+id/tv_main"
		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
    	>
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="50sp"
		    android:text="@string/tv_main01"
		    android:textSize="20sp" 
		    />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10sp"
		    android:text="@string/tv_main02"
		    android:textSize="25sp" 
		    />
	</LinearLayout>
    <TableLayout
		android:id="@+id/tablelayout02"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:stretchColumns="0,1,2"
		android:gravity="bottom"
		>
		<TableRow
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    >
			<Button
				android:id="@+id/myButton_main_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/myButton_main_1"
				android:background="#40000000"
				/>
			<Button 
				android:id="@+id/myButton_main_2"
				android:layout_width="wrap_content"
      	 		android:layout_height="wrap_content"
      	 		android:text="@string/myButton_main_2"
      	 		android:background="#80000000"
				/>
    		<Button 
    	    	android:id="@+id/myButton_main_3"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/myButton_main_3"
    	    	android:background="#c0000000"
       			/>
    	</TableRow>
	</TableLayout>
	<android.support.v4.view.ViewPager
		android:id="@+id/vpager"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		>
		<android.support.v4.view.PagerTitleStrip
			android:id="@+id/ptstrip"
 			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="top" 
			/>
		</android.support.v4.view.ViewPager>
</LinearLayout>
