<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity" >
	<!-- Back -->
	<Button 
        android:id="@+id/myButton_frt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/backButton"
		android:background="#80000000"
        />
	<!-- 1 -->
	<TextView 
        android:id="@+id/mytv_frt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true"
        android:text="@string/frt"
        android:textSize="100sp"
		/>
	<!-- Audio -->
	<!-- Stop -->

	<Button
	    android:id="@+id/myButton_play"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/myButton_frt_back"
	    android:layout_marginBottom="104dp"
	    android:layout_toLeftOf="@+id/mytv_frt"
	    android:text="@string/audio" />

	<Button
	    android:id="@+id/myButton_stop"
	    android:layout_width="72dp"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/myButton_play"
	    android:layout_alignBottom="@+id/myButton_play"
	    android:layout_toRightOf="@+id/mytv_frt"
	    android:text="@string/stop" />

</RelativeLayout>